Fix Mobile Viewing Spacing

--- a/portfolio/static/portfolio/css/home.css
+++ b/portfolio/static/portfolio/css/home.css
@@ -207,7 +207,14 @@ section:last-of-type {
     
     section { 
         scroll-snap-align: none;
-        flex-direction: row wra;
+    }
+
+    section:nth-child(2) {
+        margin-top: 30%;
+    }
+
+    section:nth-child(3) {
+        margin-top: 15%;
     }
 }
 
